--- a/prt-frontend/src/components/Medium/Rockstar.css
+++ b/prt-frontend/src/components/Medium/Rockstar.css
@@ -1,10 +1,10 @@
 .rockstar-panel{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
     background-color: whitesmoke;
-    color: rgba(0, 81, 81);
+    color: rgba(0, 81, 81, 0.7);
     height: 250px;
     border-radius: 10px;
-    max-width: 400px;
+   
     top: 20%;
     left: 10px;
     width:25%;
@@ -30,7 +30,7 @@
 }
 .rockstar-info{
     background-color: white;
-    
+
     
     margin: 5px;
     z-index: 2;
@@ -44,7 +44,6 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
     margin-left: 5%;
     width: 5vmax;
-    max-width: 100px;
     top:6%;
     position: absolute;
     border-radius: 50%;
@@ -56,8 +55,7 @@
     padding-left: 2vmax;
     padding-right: 10px;
     border-radius: 5px;
-    background-color: rgba(0, 81, 81,0.8);
-    font-size: 3vmin;
+    background-color: rgba(0, 81, 81, 0.7);
     width: max-content;
 }
 .position{
@@ -74,7 +72,7 @@
 }
 .coreValues{
     
-    color: rgba(0, 81, 81);
+    color: rgba(0, 81, 81,0.7);
     margin-right: 5px;
     display: inline;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
